Prose and caching